# rm-lecture3-detection

./: .gitignore  CMakeLists.txt  README.md
include/: ArmorDetector.hpp
src/: ArmorDetector.cpp  main.cpp
